log
Fri 29 Mar 2024 09:00:19 PM UTC: 
 tests:  0|6
total_score: 0/70
2590f40
Fri 29 Mar 2024 09:09:53 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
69d71d6
Fri 29 Mar 2024 09:11:01 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:82:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   82 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:73:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   73 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:60:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   60 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e86fed7
Fri 29 Mar 2024 09:11:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   41 |   if (lista->head == NULL) {
      |       ^~~~~
      |       list
list.c:41:7: note: each undeclared identifier is reported only once for each function it appears in
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:82:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   82 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:73:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   73 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:60:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   60 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b8afdb6
Fri 29 Mar 2024 09:12:05 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   41 |   if (lista->head == NULL) {
      |       ^~~~~
      |       list
list.c:41:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4a73307
